--- a/sass/layouts/footer/_soc-footer.scss
+++ b/sass/layouts/footer/_soc-footer.scss
@@ -41,7 +41,7 @@
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
    &:hover,
    &:focus {
-   background-color: green;
+   background-color: var(--accent-color);
    }
  }
  .soc-footer-icon {
