--- a/sass/layouts/header/_site-nav.scss
+++ b/sass/layouts/header/_site-nav.scss
@@ -1,5 +1,4 @@
- /* Site nav */
- .site-nav {
+.site-nav {
    display: flex;
    padding: 0px;
  }
@@ -7,11 +6,11 @@
  .site-nav .site-item + .site-item {
    margin-left: 50px;
    display: block;
+   &:last-child {
+      margin-right: 0;
+    }
  }
  
- .site-nav .site-item:last-child {
-   margin-right: 0;
- }
  
  .site-item {
    position: relative;
@@ -43,12 +42,13 @@
    padding-top: 32px;
    padding-bottom: 32px;
    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   &:hover,
+   &:focus {
+   color: var(--accent-color);
+   }
  }
  
- .site-nav .site-link:hover,
- .site-nav .site-link:focus {
-   color: var(--accent-color);
- }
+
  
  .site-nav .link.current {
    color: var(--accent-color);
