--- a/sass/layouts/hero/_hero.scss
+++ b/sass/layouts/hero/_hero.scss
@@ -54,10 +54,11 @@
    min-width: 216px;
    border-color: transparent;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   &:hover,
+   &:focus {
+     background-color: var(--button-color);
+   }
  }
  
- .hero-button:hover,
- .hero-button:focus {
-   background-color: var(--button-color);
- }
+
  
