--- a/sass/layouts/modal/_modal.scss
+++ b/sass/layouts/modal/_modal.scss
@@ -1,215 +1,220 @@
 /* Modal */
 
 .backdrop {
-   position: fixed;
-   top: 0;
-   left: 0;
-   width: 100%;
-   height: 100%;
-   background-color: rgba(0, 0, 0, 0.2);
-   opacity: 1;
- 
-   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
- }
- 
- .is-hidden {
-   opacity: 0;
-   pointer-events: none;
- }
- 
- .modal {
-   position: absolute;
-   top: 50%;
-   left: 50%;
-   min-width: 521px;
-   padding: 40px;
-   background-color: #ffffff;
-   transform: translate(-50%, -50%);
-   transition: transform 250ms cubic-bezier(0.4, 0, 0.2 1);
-   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-     0px 2px 1px rgba(0, 0, 0, 0.2);
-   border-radius: 4px;
- }
- 
- .modal-close {
-   position: absolute;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   width: 30px;
-   height: 30px;
-   top: 10px;
-   right: 10px;
-   border-radius: 50%;
-   border: 1px solid rgba(0, 0, 0, 0.1);
-   background-color: #ffffff;
-   cursor: pointer;
- }
- 
- .modal-close-icon {
-   position: absolute;
-   width: 18px;
-   height: 18px;
-   fill: #000000;
-   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
- }
- 
- .modal-close:hover .modal-close-icon {
-   fill: var(--accent-color);
- }
- .modal-close:focus .modal-close-icon {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  min-width: 521px;
+  padding: 40px;
+  background-color: #ffffff;
+  transform: translate(-50%, -50%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2 1);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+.modal-close {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
+  top: 10px;
+  right: 10px;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: #ffffff;
+  cursor: pointer;
+  &:hover,
+  &:focus {
     fill: var(--accent-color);
   }
-  
- 
- .modal-title {
-   font-family: "Roboto";
-   font-style: normal;
-   font-weight: 700;
-   font-size: 20px;
-   line-height: 1.15;
-   text-align: center;
-   letter-spacing: 0.03em;
-   margin-bottom: 12px;
- }
- 
- .modal-input {
-   width: 100%;
-   height: 40px;
-   border: 1px solid rgba(33, 33, 33, 0.2);
-   border-radius: 4px;
-   padding: 0;
-   padding-left: 42px;
-   outline: transparent;
- }
- 
- .modal-input:focus {
-   border-color: var(--accent-color);
- }
- 
- .modal-input:focus + .modal-input-icon {
-   fill: var(--accent-color);
- }
- 
- .input-label {
-   font-weight: 400;
-   font-size: 12px;
-   line-height: 1.16;
-   letter-spacing: 0.01em;
-   color: #757575;
-   margin-bottom: 4px;
- }
- 
- .input-wrap {
-   position: relative;
-   margin-bottom: 10px;
- }
- 
- .modal-input-icon {
-   position: absolute;
-   left: 0%;
-   left: 12px;
-   top: 50%;
-   transform: translateY(-50%);
- }
- 
- .input-label {
-   display: block;
-   margin-bottom: 4px;
- }
- .modal-comment {
-   -webkit-box-sizing: border-box;
-   box-sizing: border-box;
-   width: 448px;
-   height: 120px;
-   border: 1px solid rgba(33, 33, 33, 0.2);
-   border-radius: 4px;
-   resize: none;
-   padding-left: 16px;
-   padding-top: 10px;
-   padding-bottom: 0;
-   padding-right: 0;
-   display: block;
- }
- .modal-comment::placeholder {
+}
+
+.modal-close-icon {
+  position: absolute;
+  width: 18px;
+  height: 18px;
+  fill: #000000;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    fill: var(--accent-color);
+  }
+}
+
+.modal-title {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-bottom: 12px;
+}
+
+.modal-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding: 0;
+  padding-left: 42px;
+  outline: transparent;
+
+  &:focus {
+    border-color: var(--accent-color);
+  }
+
+  &:focus + .modal-input-icon {
+    fill: var(--accent-color);
+  }
+}
+
+.input-label {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: #757575;
+  margin-bottom: 4px;
+}
+
+.input-wrap {
+  position: relative;
+  margin-bottom: 10px;
+}
+
+.modal-input-icon {
+  position: absolute;
+  left: 0%;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.input-label {
+  display: block;
+  margin-bottom: 4px;
+}
+
+.modal-comment {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 448px;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  resize: none;
+  padding-left: 16px;
+  padding-top: 10px;
+  padding-bottom: 0;
+  padding-right: 0;
+  display: block;
+  &::placeholder {
    font-size: 12px;
    line-height: 1.6;
    letter-spacing: 0.01em;
    color: rgba(117, 117, 117, 0.5);
- }
  
- .modal-comment:focus {
-   border-color: var(--accent-color);
+   &:focus {
+     border-color: var(--accent-color);
+   }
  }
- 
- .modal-chek {
-    justify-content: center;
-    display: flex;
-    margin-top: 10px;
-    margin-bottom: 30px;
- }
- 
- .check-text {
-   font-size: 14px;
-   line-height: 1.71;
-   letter-spacing: 0.03em;
-   color: #757575;
-   display: flex;
-   align-items: center;
- }
- 
- .check-link {
-   font-weight: 400;
-   font-size: 14px;
-   line-height: 1.71;
-   letter-spacing: 0.03em;
-   text-decoration-line: underline;
-   color: #2196f3;
- }
- 
- .check-text span {
-   width: 16px;
-   height: 15px;
-   border: 2px solid #212121;
-   border-radius: 2px;
-   margin-right: 7px;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   fill: transparent;
- }
- 
- .input-check:checked + .check-text span {
+}
+
+
+
+.modal-chek {
+  justify-content: center;
+  display: flex;
+  margin-top: 10px;
+  margin-bottom: 30px;
+}
+
+.check-text {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #757575;
+  display: flex;
+  align-items: center;
+}
+
+.check-link {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  text-decoration-line: underline;
+  color: #2196f3;
+}
+
+.check-text span {
+  width: 16px;
+  height: 15px;
+  border: 2px solid #212121;
+  border-radius: 2px;
+  margin-right: 7px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+  .input-check:checked + & {
    background-color: var(--accent-color);
    border-color: transparent;
    fill: var(--white-color);
  }
- .input-check:focus + .check-text span {
+ .input-check:focus + &{
    border-color: var(--accent-color);
  }
- 
- .modal-button {
-    display: block;
-    margin: auto;
-    cursor: pointer;
-    background: #188ce8;
-    -webkit-box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
-    box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
-    border-radius: 4px;
-    color: #fff;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 52px;
-    padding-right: 52px;
-    border: none;
-    font-weight: 700;
- font-size: 16px;
- line-height: 1.88;
- display: flex;
- align-items: center;
- text-align: center;
- letter-spacing: 0.06em;
- 
- color: #FFFFFF;
-  }
+}
+
+
+
+
+
+.modal-button {
+  display: block;
+  margin: auto;
+  cursor: pointer;
+  background: #188ce8;
+  -webkit-box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
+  box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
+  border-radius: 4px;
+  color: #fff;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 52px;
+  padding-right: 52px;
+  border: none;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+
+  color: #ffffff;
+}
