--- a/sass/layouts/portfolio/_work-gallery.scss
+++ b/sass/layouts/portfolio/_work-gallery.scss
@@ -9,26 +9,26 @@
    margin-right: 30px;
    margin-bottom: 30px;
    text-align: left;
+   &:nth-child(3n) {
+      margin-right: 0;
+    }
+    &:nth-last-child(-n + 3) {
+      margin-bottom: 0;
+    }
+    
  }
- 
- .work-gallery-item:nth-child(3n) {
-   margin-right: 0;
- }
- 
- .work-gallery-item:nth-last-child(-n + 3) {
-   margin-bottom: 0;
- }
- 
+
  .work-gallery-link {
    display: block;
    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   &:hover,
+   &:focus {
+     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+       1px 4px 6px rgba(0, 0, 0, 0.16);
+   }
  }
  
- .work-gallery-link:hover,
- .work-gallery-link:focus {
-   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-     1px 4px 6px rgba(0, 0, 0, 0.16);
- }
+
  
  .galery-list {
    overflow: hidden;
@@ -50,13 +50,14 @@
    background: rgba(33, 150, 243, 0.9);
    transform: translateY(100%);
    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   .work-gallery-link:focus &,
+   .work-gallery-link:hover & {
+     transform: translateY(0);
+   }
+   
  }
  
- .work-gallery-link:focus .gallery-content,
- .work-gallery-link:hover .gallery-content {
-   transform: translateY(0);
- }
- 
+
  .gallery-item {
    padding-top: 20px;
    padding-bottom: 20px;
