--- a/sass/layouts/studio/_company.scss
+++ b/sass/layouts/studio/_company.scss
@@ -34,17 +34,19 @@
    border: 1px solid var(--border-color);
    border-radius: 5px;
    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   &:hover,
+   &:focus {
+     border-color: var(--accent-color);
+   }
  }
+
  .company-icon {
    fill: #afb1b8;
    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   .company-link:hover &,
+   .company-link:focus & {
+     fill: var(--accent-color);
+   }
  }
- .company-link:hover,
- .company-link:focus {
-   border-color: var(--accent-color);
- }
+
  
- .company-link:hover .company-icon,
- .company-link:focus .company-icon {
-   fill: var(--accent-color);
- }
