--- a/sass/layouts/studio/_team.scss
+++ b/sass/layouts/studio/_team.scss
@@ -75,18 +75,20 @@
    align-items: center;
    border-radius: 50%;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
- }
- .team-soc-link:hover,
- .team-soc-link:focus {
+   &:hover,
+   &:focus {
    background-color: var(--accent-color);
+   }
  }
+
  
- .team-soc-link:hover .team-soc-icon,
- .team-soc-link:focus .team-soc-icon {
-   fill: white;
- }
+
  
  .team-soc-icon {
    fill: #afb1b8;
    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   .team-soc-link:hover &,
+   .team-soc-link:focus &{
+     fill: white;
+   }
  }
